--- a/tours.html
+++ b/tours.html
@@ -161,7 +161,7 @@
                     <div class="mb-5">
                         <!-- <h6 class="text-primary mb-3">Jan 01, 2050</h6> -->
                         <h1 class="mb-5">Studying abroad is always the best way to discover yourself.</h1>
-                        <img class="img-fluid rounded w-100 mb-4" src="img/carousel-1.jpg" alt="Image">
+                        <img class="img-fluid rounded w-100 mb-4" src="img/tourst-visa.jpg" alt="Image">
                         <p>Studying abroad can be a life-changing experience. It offers the opportunity to immerse
                             oneself in a new culture, learn a new language, and gain a unique perspective on the world.
                             Additionally, studying abroad can enhance one's academic and professional prospects by
