--- a/training.html
+++ b/training.html
@@ -161,7 +161,7 @@
                     <div class="mb-5">
                         <!-- <h6 class="text-primary mb-3">Jan 01, 2050</h6> -->
                         <h1 class="mb-5">Studying abroad is always the best way to discover yourself.</h1>
-                        <img class="img-fluid rounded w-100 mb-4" src="img/carousel-1.jpg" alt="Image">
+                        <img class="img-fluid rounded w-100 mb-4" src="img/training.jpg" alt="Image">
                         <p>Studying abroad can be a life-changing experience. It offers the opportunity to immerse
                             oneself in a new culture, learn a new language, and gain a unique perspective on the world.
                             Additionally, studying abroad can enhance one's academic and professional prospects by
@@ -171,8 +171,8 @@
                             culture, language, safety, and visa requirements, as well as the academic program and cost.
                             With proper preparation and an open mind, studying abroad can be an incredibly rewarding
                             adventure that broadens one's horizons and enriches one's life.</p>
-                        <h2 class="mb-4">Training in Stock Market and Software Development.</h2>
-                        <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/blog-1.jpg" alt="Image">
+                        <h2 class="mb-4">Every once in a while, the market does something so stupid it takes your breath away.</h2>
+                        <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/stockmarket.jpg" alt="Image">
                         <p>If you are interested in a career that combines finance with technology, then pursuing
                             training in both the stock market and software development could be a great choice for you.
                             This combination of skills can be valuable in positions that involve designing and
@@ -367,7 +367,7 @@
                                             <small class="m-0"><i class="far fa-clock text-primary mr-2"></i></small>
                                         </div>
                                         <a class="h5" href="">Stock-Market</a>
-                                        
+
                                     </div>
                                 </div>
                             </div>
@@ -523,7 +523,7 @@
                                 href="https://www.youtube.com/@HykinOverseas"><i class="fab fa-youtube"></i></a>
                             <a class="btn btn-outline-light btn-instagram btn-square mr-2" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
                         "><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-outline-light btn-whatsapp btn-square"
+                            <a class="btn btn-outline-light btn-whatsapp btn-square"
                                 href="https://wa.me/message/HYXBIBJVXC3RP1"><i class="fab fa-whatsapp"></i></a>
                         </div>
                     </div>
@@ -561,8 +561,8 @@
         style="border-color: rgba(256, 256, 256, .1) !important;">
         <div class="row">
             <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white">&copy; <a class="text-primary" href="#">Hykin Overseas</a>. All Rights Reserved. Designed by <a
-                        href="https://htmlcodex.com">2023</a>
+                <p class="m-0 text-white">&copy; <a class="text-primary" href="#">Hykin Overseas</a>. All Rights
+                    Reserved. Designed by <a href="https://htmlcodex.com">2023</a>
                 </p>
             </div>
             <div class="col-lg-6 text-center text-md-right">
