--- a/visit-visa.html
+++ b/visit-visa.html
@@ -202,7 +202,7 @@
                     <div class="mb-5">
                         <!-- <h6 class="text-primary mb-3">Jan 01, 2050</h6> -->
                         <h1 class="mb-5">Studying abroad is always the best way to discover yourself.</h1>
-                        <img class="img-fluid rounded w-100 mb-4" src="img/carousel-1.jpg" alt="Image">
+                        <img class="img-fluid rounded w-100 mb-4" src="img/tourst-visa.jpg" alt="Image">
                         <p>Studying abroad can be a life-changing experience. It offers the opportunity to immerse
                             oneself in a new culture, learn a new language, and gain a unique perspective on the world.
                             Additionally, studying abroad can enhance one's academic and professional prospects by
@@ -430,19 +430,19 @@
                                         <div class="team-social">
                                             <a class="btn btn-outline-light mx-1" href="stock-market.html"
                                                 role="button">More Details</a> -->
-                                            <!-- <button class=" btn btn-outline-light mx-1">More Details</button> -->
-                                            <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                <!-- <button class=" btn btn-outline-light mx-1">More Details</button> -->
+                <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-linkedin-in"></i></a> -->
-                                        <!-- </div>
+                <!-- </div>
                                     </div>
                                     <div class="bg-secondary p-4">
                                         <h5 class="m-0">Stock Market</h5> -->
-                                        <!-- <p class="m-0">Stock Market</p> -->
-                                    <!-- </div>
+                <!-- <p class="m-0">Stock Market</p> -->
+                <!-- </div>
                                 </div>
                             </div>
                             <div class="col-md-6 col-lg-6 text-center team mb-4">
@@ -452,22 +452,22 @@
                                         <div class="team-social">
                                             <a class="btn btn-outline-light mx-1" href="software-training.html"
                                                 role="button">More Details</a> -->
-                                            <!-- <button class="btn btn-outline-light mx-1"></button> -->
-                                            <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                <!-- <button class="btn btn-outline-light mx-1"></button> -->
+                <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-linkedin-in"></i></a> -->
-                                        <!-- </div>
+                <!-- </div>
                                     </div>
                                     <div class="bg-secondary p-4">
                                         <h5 class="m-0">Software Training</h5> -->
-                                        <!-- <p class="m-0">Software Training</p> -->
-                                    <!-- </div>
+                <!-- <p class="m-0">Software Training</p> -->
+                <!-- </div>
                                 </div>
                             </div> -->
-                            <!-- <div class="col-md-6 col-lg-3 text-center team mb-4">
+                <!-- <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
                                         <img class="img-fluid" src="img/team/team-3.jpg" alt="">
@@ -486,7 +486,7 @@
                                     </div>
                                 </div>
                             </div> -->
-                            <!-- <div class="col-md-6 col-lg-3 text-center team mb-4">
+                <!-- <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
                                         <img class="img-fluid" src="img/team/team-4.jpg" alt="">
@@ -505,12 +505,12 @@
                                     </div>
                                 </div>
                             </div> -->
-                        </div>
-                    </div>
-                </div>
-                <!-- Team End -->
             </div>
         </div>
+    </div>
+    <!-- Team End -->
+    </div>
+    </div>
     </div>
     <!-- Detail End -->
 
@@ -535,7 +535,7 @@
                                 href="https://www.youtube.com/@HykinOverseas"><i class="fab fa-youtube"></i></a>
                             <a class="btn btn-outline-light btn-instagram btn-square mr-2" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
                         "><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-outline-light btn-whatsapp btn-square"
+                            <a class="btn btn-outline-light btn-whatsapp btn-square"
                                 href="https://wa.me/message/HYXBIBJVXC3RP1"><i class="fab fa-whatsapp"></i></a>
                         </div>
                     </div>
@@ -573,8 +573,8 @@
         style="border-color: rgba(256, 256, 256, .1) !important;">
         <div class="row">
             <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white">&copy; <a class="text-primary" href="#">Hykin Overseas</a>. All Rights Reserved. Designed by <a
-                        href="https://htmlcodex.com">2023</a>
+                <p class="m-0 text-white">&copy; <a class="text-primary" href="#">Hykin Overseas</a>. All Rights
+                    Reserved. Designed by <a href="https://htmlcodex.com">2023</a>
                 </p>
             </div>
             <div class="col-lg-6 text-center text-md-right">
