--- a/study-in-uk.html
+++ b/study-in-uk.html
@@ -418,7 +418,7 @@
 
 
                 <!-- Course Start -->
-                <section class="pt-5 pb-5">
+                <!-- <section class="pt-5 pb-5">
                     <div class="container">
                         <div class="row">
                             <div class="col-12 text-center mb-5">
@@ -549,7 +549,7 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </section> -->
                 <!-- Course End -->
 
                 <!--course start-->
