--- a/study.html
+++ b/study.html
@@ -160,7 +160,7 @@
                         <h1 class="mb-5">
                             Studying abroad is always the best way to discover yourself.
                         </h1>
-                        <img class="img-fluid rounded w-100 mb-4" src="img/carousel-1.jpg" alt="Image" />
+                        <img class="img-fluid rounded w-100 mb-4" src="img/study.jpg" alt="Image" />
                         <p>
                             Studying abroad can be a life-changing experience. It offers the
                             opportunity to immerse oneself in a new culture, learn a new
@@ -176,10 +176,11 @@
                             studying abroad can be an incredibly rewarding adventure that
                             broadens one's horizons and enriches one's life.
                         </p>
-                        <h2 class="mb-4">
+                        <!-- <h2 class="mb-4">
                             Training in Stock Market and Software Development.
                         </h2>
-                        <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/blog-1.jpg" alt="Image" />
+                        <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/stock-market (3).jpg"
+                            alt="Image" />
                         <p>
                             If you are interested in a career that combines finance with
                             technology, then pursuing training in both the stock market and
@@ -201,7 +202,7 @@
                             in your field. With the right training and dedication, you can
                             build a successful career that allows you to utilize your skills
                             and knowledge to make a positive difference in the world.
-                        </p>
+                        </p> -->
                     </div>
 
                     <!-- Comment List -->
@@ -316,45 +317,6 @@
                     </div>
 
                     <!-- Recent Post -->
-                    <!-- <div class="mb-5">
-                        <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Recent Post</h3>
-                        <a class="d-flex align-items-center text-decoration-none mb-3" href="">
-                            <img class="img-fluid rounded" src="img/blog-80x80.jpg" alt="">
-                            <div class="pl-3">
-                                <h6 class="m-1">Diam lorem dolore justo eirmod lorem dolore</h6>
-                                <small>Jan 01, 2050</small>
-                            </div>
-                        </a>
-                        <a class="d-flex align-items-center text-decoration-none mb-3" href="">
-                            <img class="img-fluid rounded" src="img/blog-80x80.jpg" alt="">
-                            <div class="pl-3">
-                                <h6 class="m-1">Diam lorem dolore justo eirmod lorem dolore</h6>
-                                <small>Jan 01, 2050</small>
-                            </div>
-                        </a>
-                        <a class="d-flex align-items-center text-decoration-none mb-3" href="">
-                            <img class="img-fluid rounded" src="img/blog-80x80.jpg" alt="">
-                            <div class="pl-3">
-                                <h6 class="m-1">Diam lorem dolore justo eirmod lorem dolore</h6>
-                                <small>Jan 01, 2050</small>
-                            </div>
-                        </a>
-                    </div> -->
-
-                    <!-- Tag Cloud -->
-                    <div class="mb-5">
-                        <h3 class="text-uppercase mb-4" style="letter-spacing: 5px">
-                            Tag Cloud
-                        </h3>
-                        <div class="d-flex flex-wrap m-n1">
-                            <a href="" class="btn btn-outline-primary m-1">Design</a>
-                            <a href="" class="btn btn-outline-primary m-1">Development</a>
-                            <a href="" class="btn btn-outline-primary m-1">Marketing</a>
-                            <a href="" class="btn btn-outline-primary m-1">SEO</a>
-                            <a href="" class="btn btn-outline-primary m-1">Writing</a>
-                            <a href="" class="btn btn-outline-primary m-1">Consulting</a>
-                        </div>
-                    </div>
                     <!-- Comment Form -->
                     <div class="bg-secondary rounded p-4">
                         <h3 class="text-uppercase mb-4" style="letter-spacing: 5px">
