--- a/index.html
+++ b/index.html
@@ -670,35 +670,15 @@
             </div>
             <div class="row pb-3">
                 <div class="col-lg-6 mb-4">
-                    <div class="blog-item position-relative overflow-hidden rounded mb-2">
-                        <img class="img-fluid" src="img/blog-1.jpg" alt="">
-
-                        <a class="blog-overlay text-decoration-none" href="https://www.youtube.com/watch?v=-V1yn8FN2NE">
-                            <i class="fab fa-youtube"></i>
-                            <h5 class="text-white mb-3">Hykin Overseas Introduction
-                                video</h5>
-                            <p class="text-primary m-0"></p>
-                        </a>
+                    <div class="blog-item position-relative overflow-hidden rounded-2 mb-2">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/-V1yn8FN2NE"></iframe>
                     </div>
                 </div>
                 <div class="col-lg-6 mb-4">
                     <div class="blog-item position-relative overflow-hidden rounded mb-2">
-                        <img class="img-fluid" src="img/blog-2.jpg" alt="">
-                        <a class="blog-overlay text-decoration-none" href="https://www.youtube.com/watch?v=kki4sFKyKpI">
-                            <h5 class="text-white mb-3">Hykin Overseas Informative Video </h5>
-                            <p class="text-primary m-0"></p>
-                        </a>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/kki4sFKyKpI"></iframe>
                     </div>
                 </div>
-                <!-- <div class="col-lg-4 mb-4">
-                    <div class="blog-item position-relative overflow-hidden rounded mb-2">
-                        <img class="img-fluid" src="img/blog-3.jpg" alt="">
-                        <a class="blog-overlay text-decoration-none" href="">
-                            <h5 class="text-white mb-3"></h5>
-                            <p class="text-primary m-0"></p>
-                        </a>
-                    </div>
-                </div> -->
             </div>
         </div>
     </div>
