--- a/work-visa.html
+++ b/work-visa.html
@@ -551,11 +551,11 @@
                     <div class="col-md-6 mb-5">
                         <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Our Courses</h5>
                         <div class="d-flex flex-column justify-content-start">
-                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Education</a>
-                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Visas</a>
-                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Tours &
+                            <a class="text-white mb-2" href="education.html"><i class="fa fa-angle-right mr-2"></i>Education</a>
+                            <a class="text-white mb-2" href="visit-visa.html"><i class="fa fa-angle-right mr-2"></i>Visas</a>
+                            <a class="text-white mb-2" href="tours.html"><i class="fa fa-angle-right mr-2"></i>Tours &
                                 Travells</a>
-                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Stock Market</a>
+                            <a class="text-white mb-2" href="trading.html"><i class="fa fa-angle-right mr-2"></i>Stock Market</a>
                             <!-- <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>SEO</a> -->
                         </div>
                     </div>
